fix: sidebar language component misbehaving
- large texts
- misaligned searchbar (with respect to lang-list)

--- a/src/style.css
+++ b/src/style.css
@@ -235,6 +235,11 @@ p {
 	margin-left: 2.66667%;
 }
 
+.lang-list,
+.lang-list ul li a span {
+	font-size: 1.5rem !important;
+}
+
 /*------------ GB blocks -----------*/
 
 .wp-block-group__inner-container {
